<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/yellow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_pokeball"
        android:layout_width="241dp"
        android:layout_height="216dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pokeball" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="401dp"
        android:layout_height="475dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_sub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_pikachu">

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="79dp"
            android:layout_height="23dp"
            android:layout_marginTop="75dp"
            android:background="@drawable/bg_type_electric"
            android:text="@string/TypeElectric"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="20dp"
            android:text="@string/Height"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_type" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="20dp"
            android:text="@string/Weight"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_height" />

        <TextView
            android:id="@+id/tv_poke_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:text="@string/WeightPikachu"
            android:textColor="@color/gray"
            app:layout_constraintStart_toEndOf="@+id/tv_weight"
            app:layout_constraintTop_toBottomOf="@+id/tv_poke_height" />

        <TextView
            android:id="@+id/tv_poke_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/HeightPikachu"
            android:textColor="@color/gray"
            app:layout_constraintStart_toEndOf="@+id/tv_height"
            app:layout_constraintTop_toBottomOf="@+id/tv_type" />

        <TextView
            android:id="@+id/tv_ability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Ability"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.412"
            app:layout_constraintStart_toEndOf="@+id/tv_poke_height"
            app:layout_constraintTop_toBottomOf="@+id/tv_type" />

        <TextView
            android:id="@+id/tv_poke_ability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/AbilityPikachu"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toEndOf="@+id/tv_poke_weight"
            app:layout_constraintTop_toBottomOf="@+id/tv_ability" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="253dp"
            android:layout_height="82dp"
            android:layout_marginTop="28dp"
            android:text="@string/Description"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_poke_weight" />

        <ImageButton
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_previous"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_previous"
            app:srcCompat="@drawable/previous_icon" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="46dp"
            android:layout_height="41dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_next"
            app:layout_constraintTop_toBottomOf="@+id/iv_next"
            app:layout_constraintVertical_bias="0.266"
            app:srcCompat="@drawable/next_icon" />

        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="90dp"
            android:layout_height="62dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_previous"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:srcCompat="@drawable/raichu" />

        <ImageView
            android:id="@+id/iv_previous"
            android:layout_width="56dp"
            android:layout_height="62dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:srcCompat="@drawable/arbok" />

        <TextView
            android:id="@+id/tv_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Previous"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_previous"
            app:layout_constraintTop_toBottomOf="@+id/iv_previous"
            app:layout_constraintVertical_bias="0.492" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Next"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_previous"
            app:layout_constraintTop_toBottomOf="@+id/iv_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <ImageView
        android:id="@+id/im_favorite"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/favorite_icon" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/PokemonName"
        app:layout_constraintEnd_toStartOf="@+id/im_favorite"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/PokemonNumber"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/im_favorite"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <ImageView
        android:id="@+id/iv_pikachu"
        android:layout_width="156dp"
        android:layout_height="144dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num"
        app:srcCompat="@drawable/pikachu" />


</androidx.constraintlayout.widget.ConstraintLayout>